# ProjectEuler

./: README.md
haskell/: ProjectEuler.cabal
haskell/main/: Main.hs
haskell/src/: '  Euler.hs
haskell/src/Euler/: Problem1.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs  Problem14.hs  Problem15.hs  Problem16.hs  Problem17.hs  Problem18.hs  Problem19.hs  Problem2.hs  Problem20.hs  Problem21.hs  Problem3.hs  Problem4.hs  Problem5.hs  Problem6.hs  Problem7.hs  Problem8.hs  Problem9.hs  Utils.hs  problem1.hs
haskell/test/: TestMain.hs
haskell/test/Euler/: P11Test.hs  P12Test.hs  P14Test.hs  P18Test.hs  P1Test.hs  P2Test.hs  P3Test.hs  P4Test.hs  P5Test.hs  UtilsTest.hs
