name:                     ProjectEuler
version:                  1.0.0
author:                   David Strickland <dstrick2989@gmail.com>
maintainer:               dstrick2989@gmail.com
copyright:                (c) 2014 David Strickland
bug-reports:              https://github.com/d-strickland/ProjectEuler/issues
homepage:                 https://github.com/d-strickland/ProjectEuler
synopsis:                 David Strickland's solutions to Project Euler problems
build-type:               Simple
cabal-version:            >=1.16
tested-with:              GHC>=7.6.3

source-repository head
    type:                 git
    location:             https://github.com/d-strickland/ProjectEuler.git

library
    hs-source-dirs:       src
    default-language:     Haskell2010
    exposed-modules:      Euler
    other-modules:        Euler.Problem1
    build-depends:        base, digits
    ghc-options:          -Wall
                          -O2

test-suite euler-tests
    type:                 exitcode-stdio-1.0
    default-language:     Haskell2010
    hs-source-dirs:       test, src
    main-is:              TestMain.hs
    build-depends:        base,
                          HUnit,
                          QuickCheck,
                          tasty,
                          tasty-hunit,
                          tasty-quickcheck,
                          digits
